Terminology improvements by Vladimir Melo.
2008-07-24  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>

	* pt_BR.po: Terminology improvements by Vladimir Melo.

svn path=/trunk/; revision=14415

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -16,8 +16,8 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-26 18:08-0300\n"
-"PO-Revision-Date: 2008-02-26 18:25-0300\n"
-"Last-Translator: Vladimir Melo <vladimirmelo@foresightlinux.org>\n"
+"PO-Revision-Date: 2008-07-22 13:20-0300\n"
+"Last-Translator: Vladimir Melo <vladimirmelo.psi@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <gnome-l10n-br@listas.cipsga.org.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1142,7 +1142,7 @@ msgstr "Largura do painel lateral"
 
 #: ../libnautilus-private/nautilus-autorun.c:335
 msgid "No applications found"
-msgstr "Nenhuma aplicação localizada"
+msgstr "Nenhum aplicativo localizado"
 
 #: ../libnautilus-private/nautilus-autorun.c:351
 msgid "Ask what to do"
@@ -1229,7 +1229,7 @@ msgstr "Você acabou de inserir uma mídia."
 
 #: ../libnautilus-private/nautilus-autorun.c:1107
 msgid "Choose what application to launch."
-msgstr "Escolha qual aplicação lançar."
+msgstr "Escolha qual aplicativo lançar."
 
 #: ../libnautilus-private/nautilus-autorun.c:1116
 #, c-format
@@ -2796,7 +2796,7 @@ msgstr "Não foi possível exibir \"%s\"."
 
 #: ../libnautilus-private/nautilus-mime-actions.c:1205
 msgid "There is no application installed for this file type"
-msgstr "Não existe aplicação instalada para esse tipo de arquivo"
+msgstr "Não existe aplicativo instalado para esse tipo de arquivo"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:1247
 #: ../libnautilus-private/nautilus-mime-actions.c:1488
@@ -2819,12 +2819,12 @@ msgstr[1] "Abrindo %d itens."
 #: ../libnautilus-private/nautilus-open-with-dialog.c:271
 #, c-format
 msgid "Could not set application as the default: %s"
-msgstr "Não foi possível definir a aplicação como a padrão: %s"
+msgstr "Não foi possível definir o aplicativo como o padrão: %s"
 
 #: ../libnautilus-private/nautilus-mime-application-chooser.c:184
 #: ../libnautilus-private/nautilus-open-with-dialog.c:272
 msgid "Could not set as default application"
-msgstr "Não foi possível definir como aplicação padrão"
+msgstr "Não foi possível definir como aplicativo padrão"
 
 #: ../libnautilus-private/nautilus-mime-application-chooser.c:273
 msgid "Default"
@@ -2836,11 +2836,11 @@ msgstr "Ícone"
 
 #: ../libnautilus-private/nautilus-mime-application-chooser.c:343
 msgid "Could not remove application"
-msgstr "Não foi possível remover a aplicação"
+msgstr "Não foi possível remover o aplicativo"
 
 #: ../libnautilus-private/nautilus-mime-application-chooser.c:580
 msgid "No applications selected"
-msgstr "Nenhuma aplicação selecionada"
+msgstr "Nenhum aplicativo selecionado"
 
 #: ../libnautilus-private/nautilus-mime-application-chooser.c:608
 #: ../libnautilus-private/nautilus-open-with-dialog.c:920
@@ -2857,7 +2857,7 @@ msgstr "Desconhecido"
 #, c-format
 msgid "Select an application to open %s and other files of type \"%s\""
 msgstr ""
-"Selecionar uma aplicação para abrir %s e outros arquivos do tipo \"%s\""
+"Selecionar um aplicativo para abrir %s e outros arquivos do tipo \"%s\""
 
 #: ../libnautilus-private/nautilus-mime-application-chooser.c:716
 #: ../libnautilus-private/nautilus-open-with-dialog.c:938
@@ -2867,7 +2867,7 @@ msgstr "Abrir todos os arquivos do tipo \"%s\" com:"
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:162
 msgid "Could not run application"
-msgstr "Não foi possível executar a aplicação"
+msgstr "Não foi possível executar o aplicativo"
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:174
 #, c-format
@@ -2876,21 +2876,21 @@ msgstr "Não foi possível localizar \"%s\""
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:177
 msgid "Could not find application"
-msgstr "Não foi possível localizar a aplicação"
+msgstr "Não foi possível localizar o aplicativo"
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:250
 #, c-format
 msgid "Could not add application to the application database: %s"
 msgstr ""
-"Não foi possível adicionar a aplicação ao banco de dados de aplicação: %s"
+"Não foi possível adicionar o aplicativo ao banco de dados de aplicativo: %s"
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:251
 msgid "Could not add application"
-msgstr "Não foi possível adicionar a aplicação"
+msgstr "Não foi possível adicionar o aplicativo"
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:391
 msgid "Select an Application"
-msgstr "Selecionar uma Aplicação"
+msgstr "Selecionar um Aplicativo"
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:743
 #: ../src/file-manager/fm-properties-window.c:5012
@@ -2899,7 +2899,7 @@ msgstr "Abrir Com"
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:780
 msgid "Select an application to view its description."
-msgstr "Selecionar uma aplicação para ver sua descrição."
+msgstr "Selecionar um aplicativo para ver sua descrição."
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:805
 msgid "_Use a custom command"
@@ -2932,11 +2932,11 @@ msgstr "_Adicionar"
 #: ../libnautilus-private/nautilus-open-with-dialog.c:972
 #: ../libnautilus-private/nautilus-open-with-dialog.c:987
 msgid "Add Application"
-msgstr "Adicionar Aplicação"
+msgstr "Adicionar Aplicativo"
 
 #: ../libnautilus-private/nautilus-program-choosing.c:126
 msgid "Open Failed, would you like to choose another application?"
-msgstr "Falha ao abrir, você quer escolher outra aplicação?"
+msgstr "Falha ao abrir, você quer escolher outro aplicativo?"
 
 #: ../libnautilus-private/nautilus-program-choosing.c:127
 #: ../libnautilus-private/nautilus-program-choosing.c:158
@@ -2967,7 +2967,7 @@ msgid ""
 "No other applications are available to view this file.  If you copy this "
 "file onto your computer, you may be able to open it."
 msgstr ""
-"Nenhuma outra aplicação está disponível para ver esse arquivo. Se você "
+"Nenhum outro aplicativo está disponível para ver esse arquivo. Se você "
 "copiar este arquivo para o seu computador, você pode ser capaz de abri-lo."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:167
@@ -2996,7 +2996,7 @@ msgstr "Detalhes: "
 #: ../libnautilus-private/nautilus-program-choosing.c:396
 #: ../libnautilus-private/nautilus-program-choosing.c:462
 msgid "There was an error launching the application."
-msgstr "Houve um erro ao lançar a aplicação."
+msgstr "Houve um erro ao lançar o aplicativo."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:425
 #: ../libnautilus-private/nautilus-program-choosing.c:436
@@ -3547,13 +3547,13 @@ msgstr "Abrir cada item selecionado em uma janela da pasta"
 #: ../src/file-manager/fm-directory-view.c:6265
 #: ../src/file-manager/fm-directory-view.c:6269
 msgid "Open with Other _Application..."
-msgstr "Abrir com Outra _Aplicação..."
+msgstr "Abrir com Outro _Aplicativo..."
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6266
 #: ../src/file-manager/fm-directory-view.c:6270
 msgid "Choose another application with which to open the selected item"
-msgstr "Escolhe outra aplicação com a qual abrir o item selecionado"
+msgstr "Escolhe outro aplicativo com a qual abrir o item selecionado"
 
 #. name, stock id
 #. label, accelerator
