--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-28  Yannig Marchegay <yannig@marchegay.org>
+
+	* oc.po: Updated Occitan translation.
+
 2008-07-25  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
