Updated zh_CN translation.
svn path=/branches/gnome-2-22/; revision=14423

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-29  Funda Wang  <fundawang@gmail.com>
+
+	* zh_CN.po: Updated zh_CN translation.
+
 2008-07-21  Hendrik Richter  <hendi@gnome-de.org>
 
 	* de.po: Fixed German translation by
