Revert last commit, it broke the build.
2008-07-29  Colin Walters <walters@verbum.org>

	* oc.po: Revert last commit, it broke the build.


svn path=/trunk/; revision=14424

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-29  Colin Walters <walters@verbum.org>
+
+	* oc.po: Revert last commit, it broke the build.
+
 2008-07-29  Funda Wang  <fundawang@gmail.com>
 
 	* zh_CN.po: Updated zh_CN translation.
