Identify to GNOME session as file manager, and not as generic desktop
2008-07-30  Christian Neumair  <cneumair@gnome.org>

	* nautilus.desktop.in.in:
	Identify to GNOME session as file manager, and not as generic desktop
	application. Fixes #525056. Matthias Clasen.

svn path=/trunk/; revision=14426

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-07-30  Christian Neumair  <cneumair@gnome.org>
+
+	* nautilus.desktop.in.in:
+	Identify to GNOME session as file manager, and not as generic desktop
+	application. Fixes #525056. Matthias Clasen.
+
 2008-07-29  David Zeuthen  <davidz@redhat.com>
 
 	* configure.in:
