Never use linear selection in manual layout.
2008-08-02  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-icon-container.c (keyboard_move_to):
	Never use linear selection in manual layout.

svn path=/trunk/; revision=14436

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-08-02  Christian Neumair  <cneumair@gnome.org>
 
+	* libnautilus-private/nautilus-icon-container.c (keyboard_move_to):
+	Never use linear selection in manual layout.
+
+2008-08-02  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-icon-container.c (get_cmp_point_x),
 	(same_column_below_highest), (keyboard_move_to),
 	(keyboard_arrow_key), (is_rectangle_selection_event),
