--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-03  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Updated Japanese translation.
+
 2008-07-29  Colin Walters <walters@verbum.org>
 
 	* oc.po: Revert last commit, it broke the build.
