Update for release.
2008-08-03  Christian Neumair  <cneumair@gnome.org>

	* NEWS:
	Update for release.

svn path=/trunk/; revision=14439

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-08-03  Christian Neumair  <cneumair@gnome.org>
 
+	* NEWS:
+	Update for release.
+
+2008-08-03  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-file-operations.c (str_replace),
 	(make_file_name_valid_for_dest_fs), (get_unique_target_file),
 	(get_target_file_for_link), (get_target_file), (create_dest_dir),
