Post release version bump.
2008-08-03  Christian Neumair  <cneumair@gnome.org>

	* configure.in:
	Post release version bump.

svn path=/trunk/; revision=14441

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-08-03  Christian Neumair  <cneumair@gnome.org>
 
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.23.6 ===
+
+2008-08-03  Christian Neumair  <cneumair@gnome.org>
+
 	* NEWS:
 	Update for release.
 
