When changing the file name, only clear the display name if the new file
2008-08-04  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-file.c (update_info_internal):
	When changing the file name, only clear the display name if the new
	file info has a NULL display name, i.e. it hasn't been set before with
	nautilus_file_set_display_name(). Fixes icon names of computer:/// items.

svn path=/trunk/; revision=14442

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-08-04  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-file.c (update_info_internal):
+	When changing the file name, only clear the display name if the new
+	file info has a NULL display name, i.e. it hasn't been set before with
+	nautilus_file_set_display_name(). Fixes icon names of computer:/// items.
+
 2008-08-03  Christian Neumair  <cneumair@gnome.org>
 
 	* configure.in:
