Update for release.
2008-08-04  Christian Neumair  <cneumair@gnome.org>

	* NEWS:
	Update for release.

	* configure.in:
	Change version to 2.23.6.1.

svn path=/trunk/; revision=14443

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-08-04  Christian Neumair  <cneumair@gnome.org>
 
+	* NEWS:
+	Update for release.
+
+	* configure.in:
+	Change version to 2.23.6.1.
+
+2008-08-04  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-file.c (update_info_internal):
 	When changing the file name, only clear the display name if the new
 	file info has a NULL display name, i.e. it hasn't been set before with
