--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Major changes in 2.23.6.1 are:
+* Fix display name of computer:// icons
+
 Major changes in 2.23.6 are:
 * Support transferring files with reserved FAT characters to a FAT file system
   Replace them with an underscore if neccessary
