--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-08-03  Christian Neumair  <cneumair@gnome.org>
+
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.23.6.1 ===
+
 2008-08-04  Christian Neumair  <cneumair@gnome.org>
 
 	* NEWS:
