--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-08-05  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/file-manager/fm-list-view.c: (create_column_editor):
+	HIG improvements for the "Visible Columns" dialog.	
+	Initial patch by Vincent Geddes (#457451).
+
 2008-08-03  Christian Neumair  <cneumair@gnome.org>
 
 	* configure.in:
