Show the parse name instead of the URI in the bookmark editor location
2008-08-06  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/nautilus-bookmarks-window.c: (on_selection_changed),
	(update_bookmark_from_text):
	Show the parse name instead of the URI in the bookmark editor
	location entry (#546267).

svn path=/trunk/; revision=14451

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-08-06  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/nautilus-bookmarks-window.c: (on_selection_changed),
+	(update_bookmark_from_text):
+	Show the parse name instead of the URI in the bookmark editor
+	location entry (#546267).
+
 2008-08-05  Jens Granseuer  <jensgr@gmx.net>
 
 	* src/nautilus-window.h: fix "parameter has incomplete type"
