--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-08-06  Christian Neumair  <cneumair@gnome.org>
 
+	* libnautilus-private/nautilus-view.c (nautilus_view_base_init):
+	* libnautilus-private/nautilus-view.h:
+	Remove unused "zoom-parameters-changed" signal.
+
+2008-08-06  Christian Neumair  <cneumair@gnome.org>
+
 	* src/nautilus-navigation-window.c (real_sync_zoom_widgets),
 	(nautilus_navigation_window_class_init):
 	* src/nautilus-window-manage-views.c (create_content_view),
