--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-06  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	 gl.po: Updated Galician translation
+
 2008-08-06  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
