Add more supported MIME types, since file-roller trunk can handle them for
2008-08-07  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-file.c (nautilus_file_is_archive):
	Add more supported MIME types, since file-roller trunk can handle them
	for remote locations. Thanks to Nelson Benítez León.

svn path=/trunk/; revision=14457

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-08-07  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-file.c (nautilus_file_is_archive):
+	Add more supported MIME types, since file-roller trunk can handle them
+	for remote locations. Thanks to Nelson Benítez León.
+
 2008-08-06  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-view.c (nautilus_view_base_init):
