Updated Polish translation
2008-08-07  Wadim Dziedzic  <wdziedzic@aviary.pl>

	* pl.po: Updated Polish translation

svn path=/trunk/; revision=14459

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-07  Wadim Dziedzic  <wdziedzic@aviary.pl>
+
+	* pl.po: Updated Polish translation
+
 2008-08-07  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Ivar Smolin
