cs.po: Updated Czech translation by Lucas Lommer.
svn path=/trunk/; revision=14461

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-08  Petr Kovar  <pknbe@volny.cz>
+
+	* cs.po: Updated Czech translation by Lucas Lommer.
+
 2008-08-08  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
