Updated Japanese translation.
2008-08-09  Takeshi AIHANA <takeshi.aihana@gmail.com>

        * ja.po: Updated Japanese translation.

svn path=/trunk/; revision=14462

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-09  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Updated Japanese translation.
+
 2008-08-08  Petr Kovar  <pknbe@volny.cz>
 
 	* cs.po: Updated Czech translation by Lucas Lommer.
