--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-12  Ilkka Tuohela <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2008-08-09  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
