--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-08-13  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-dnd.c
+	(nautilus_drag_default_drop_action_for_icons):
+	Use correct target file for same filesystem check when dropping to
+	desktop. Fixes #547282.
+
 2008-08-11  A. Walton  <awalton@gnome.org>
 
 	* libnautilus-private/nautilus-file-operations.c
