--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-13  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	 gl.po: Updated Galician translation
+
 2008-08-12  Ilkka Tuohela <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
