Updated Spanish translation
svn path=/trunk/; revision=14470

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-13  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 2008-08-13  Petr Kovar  <pknbe@volny.cz>
 
 	* cs.po: Updated Czech translation by Lucas Lommer.
